--- a/index.html
+++ b/index.html
@@ -126,10 +126,6 @@
             class="bx bx-collection" title="Portfolio Data Science"></i></a>
         <a href="https://drive.google.com/file/d/1D20TLp8hqc-jvrXNPfTOwy-GBv8_hx0-/view?usp=sharing" target="_blank"
           class="bx bx-download" title="Show CV"></i></a>
-
-        <!-- <a href="https://twitter.com/mlnkvld/" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-        <!-- <a href="https://instagram.com/maulana.kavaldo" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       </div>
     </div>
   </section>
@@ -181,7 +177,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Skills</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+          <!-- <p></p> -->
         </div>
 
         <div class="row skills-content">
@@ -300,7 +296,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Personal</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+          <!-- <p></p> -->
         </div>
 
         <div class="row skills-content">
@@ -383,7 +379,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+          <!-- <p></p> -->
         </div>
 
         <div class="row">
@@ -446,12 +442,12 @@
               <h4>Bootcamp Cloud Architecting</h4>
               <h5>Feb - Mart 2024</h5><br>
               <em>DTS KOMINFO | AWS</em>
-              <!-- <p> -->
               <br>
-              <!-- Achievement: -->
-              <!-- <div style="margin-left: 1em;"> -->
-              <!-- <li>Overall score: /100</li> -->
-              <!-- </p> -->
+              Achievement:
+              <div style="margin-left: 1em;">
+                <li>Total XP: 43.260 (3)</li>
+                <li>Top 5 in the class.</li>
+              </div>
             </div>
 
             <div class="resume-item">
@@ -470,12 +466,7 @@
               <h4>Green Digital Skills</h4>
               <h5>May - June 2023</h5><br>
               <em>INCO Academy</em>
-              <!-- <p> -->
               <br>
-              <!-- Achievement: -->
-              <!-- <div style="margin-left: 1em;"> -->
-              <!-- <li>Overall score: /100</li> -->
-              <!-- </p> -->
             </div>
 
             <div class="resume-item">
@@ -777,28 +768,14 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-vix filter-data">
-              <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>VIX - Kalbe Nutritionals</h4>
-                  <div class="portfolio-links">
-                    <a href="https://gamma.app/public/ARIMA-TIME-SERIES-SALES-FORECASTING-AND-CUSTOMER-SEGMENTATION-USI-edem22y3tq5znyy"
-                      target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <!-- <h4>VIX - Kalbe Nutritionals</h4> -->
                 <div class="portfolio-links">
-                  <a href="pages/project-vix-kalbe-nutritionals.html"
-                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-vix-kalbe-nutritionals.html" target="_blank" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -823,12 +800,8 @@
               <div class=" portfolio-info">
                 <h4>VIX - Home Credit Indonesia</h4>
                 <div class="portfolio-links">
-                  <!-- <a href="https://github.com/maulanakavaldo/Virtual-Internship/tree/main/Home%20Credit%20Indonesia"
-                      target="_blank" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a> -->
-
-                  <a href="pages/project-vix-hci.html" target="_blank" class="portfolio-details-lightbox"
+                  <a href="pages/project-vix-hci.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-
                 </div>
               </div>
             </div>
@@ -855,8 +828,8 @@
                 <h4>Real-time Insights from Social Media Data</h4>
                 <div class="portfolio-links">
                   <a href="pages/project-datacamp-real-time-insights-from-social-media-data.html"
-                    class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -868,9 +841,9 @@
               <div class=" portfolio-info">
                 <h4>Exploring 67 years of LEGO</h4>
                 <div class="portfolio-links">
-                  <a href="pages/project-datacamp-exploring-67-years-of-lego.html"
-                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-datacamp-exploring-67-years-of-lego.html" target="_blank"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -883,9 +856,9 @@
               <div class=" portfolio-info">
                 <h4>The Android App Market on Google Play</h4>
                 <div class="portfolio-links">
-                  <a href="pages/project-datacamp-the-android-app-market-on-google-play.html"
-                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-datacamp-the-android-app-market-on-google-play.html" target="_blank"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -913,9 +886,9 @@
               <div class=" portfolio-info">
                 <h4>A Visual History of Nobel Prize Winners</h4>
                 <div class="portfolio-links">
-                  <a href="pages/project-datacamp-a-visual-history-of-nobel-prize-winners.html"
-                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-datacamp-a-visual-history-of-nobel-prize-winners.html" target="_blank"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1422,19 +1395,6 @@
             </div>
           </div>
 
-          <div id="proa-gc" class="col-lg-3 col-md-6 galery-item filter-cloud">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/proa-gc1.png" class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>DTS PROA: Google Cloud Fundamental</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-proa-gc.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div id="aca-alibaba" class="col-lg-3 col-md-6 galery-item filter-cloud">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/alibaba-security.png" class="img-fluid img-responsive thumb" alt="">
@@ -1448,20 +1408,6 @@
             </div>
           </div>
 
-          <div id="fga" class="col-lg-3 col-md-6 galery-item filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/fga_ds1.png" class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>DTS FGA: Data Science</h4>
-                <!-- <p>Web</p> -->
-                <div class="portfolio-links">
-                  <a href="pages/gallery-fga.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-3 col-md-6 galery-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/thk/thk.png" class="img-fluid img-responsive thumb" alt="">
@@ -1469,6 +1415,19 @@
                 <h4>THK Future Knowledge</h4>
                 <div class="portfolio-links">
                   <a href="pages/gallery-thk.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="fga" class="col-lg-3 col-md-6 galery-item filter-data filter-cloud">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/dts/dts.png" class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <!-- <h4></h4> -->
+                <div class="portfolio-links">
+                  <a href="pages/gallery-dts.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1691,18 +1650,6 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 galery-item filter-data filter-py filter-sql">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/minidqlab.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <!-- <h4>Mini Bootcamp DQLab</h4> -->
-                <div class="portfolio-links"><a href="assets/img/certif_licen/minidqlab.png"
-                    data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div id="msword" class="col-lg-3 col-md-6 galery-item filter-office">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/mos_2013.png" class="img-fluid" alt="">
@@ -1716,31 +1663,7 @@
             </div>
           </div>
 
-          <!-- <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-sql">
-              <div class="portfolio-wrap">
-                <img src="assets/img/certif_licen/sql/sql-1.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>SQL</h4>
-                  <div class="portfolio-links">
-                    <a href="pages/sql.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>  
-            
-            <div id="dqlab" class="col-lg-3 col-md-6 portfolio-item filter-r">
-              <div class="portfolio-wrap">
-                <img src="assets/img/certif_licen/r/r-1.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>R</h4>
-                  <div class="portfolio-links">
-                    <a href="pages/r.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>   -->
-
-          <div id="" class="col-lg-3 col-md-6 galery-item">
+          <div id="xlfl" class="col-lg-3 col-md-6 galery-item">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/xlfl.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1758,19 +1681,6 @@
               <div class="portfolio-info">
                 <div class="portfolio-links">
                   <a href="assets/img/certif_licen/narasio.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 galery-item filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/minirevou.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <!-- <h4>Mini Course Revou</h4> -->
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/minirevou.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
@@ -1992,11 +1902,11 @@
       </div>
 
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+        &copy; 2024 <strong><span>MyResume</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
+      <!-- <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      </div> -->
     </div>
   </footer>
   <!-- End Footer -->
