--- a/pages/project-e-commerce.html
+++ b/pages/project-e-commerce.html
@@ -170,38 +170,44 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: E-Commerce</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">E-Commerce</div>
                 </li>
                 <!-- Category -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Web Application</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Web Application</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: Developer</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Developer</div>
                 </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project date</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : October 2023
+                    October 2023
                   </div><!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
                   </div>
                   <div class="col-9">
-                    : Ms. Visual Studio
+                    Ms. Visual Studio
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
                     <a href="https://github.com/maulanakavaldo/bootcamp_technocenter/tree/main/.Net" target="_blank">:
                       GitHub</a>
@@ -210,8 +216,9 @@
                 <!-- Uncomment and use as needed for other section -->
                 <!-- <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Demo</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
+                                        <a href="#" target="_blank"></a>
                                     </div>
                                 </li> -->
               </ul>
