--- a/pages/project-emotion-recognition.html
+++ b/pages/project-emotion-recognition.html
@@ -75,47 +75,54 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: Emotion Recognition</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Emotion Recognition</div>
                 </li>
                 <!-- Category -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Machine Learning, Classification</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Machine Learning, Classification</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: Machine Learning Developer</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Machine Learning Developer</div>
                 </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project date</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : Agustus 2022
+                    Agustus 2022
                   </div><!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : VSCode
+                    VSCode
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://github.com/maulanakavaldo/EmotionRecognitionAudio" target="_blank">: GitHub</a>
+                    <a href="https://github.com/maulanakavaldo/EmotionRecognitionAudio" target="_blank">GitHub</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
                 <!-- <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Demo</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
+                                        <a href="#" target="_blank"></a>
                                     </div>
                                 </li> -->
               </ul>
