--- a/pages/project-react-simple-app.html
+++ b/pages/project-react-simple-app.html
@@ -75,48 +75,55 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: Simple App React</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Simple App React</div>
                 </li>
                 <!-- Category -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Mobile App</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Mobile App</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: React Developer</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">React Developer</div>
                 </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project date</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : September 2023
+                    September 2023
                   </div><!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : VSCode
+                    VSCode
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
                     <a href="https://github.com/maulanakavaldo/bootcamp_technocenter/tree/main/React/day_2_6/react-native"
-                      target="_blank">: GitHub</a>
+                      target="_blank">GitHub</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
                 <!-- <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Demo</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
+                                        <a href="#" target="_blank"></a>
                                     </div>
                                 </li> -->
               </ul>
