--- a/pages/project-web-practical-work.html
+++ b/pages/project-web-practical-work.html
@@ -132,23 +132,27 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: Management Information System Training & Consultant</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Management Information System Training & Consultant</div>
                 </li>
                 <!-- Category -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Information System</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Information System</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: Fullstack Developer</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Fullstack Developer</div>
                 </li>
                 <!-- Company -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Company</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://github.com/maulanakavaldo/" target="_blank">: CV. Jogja Smart Indotama</a>
+                    <a href="https://github.com/maulanakavaldo/" target="_blank">CV. Jogja Smart Indotama</a>
                   </div>
                 </li>
                 <!-- Project date -->
@@ -156,30 +160,35 @@
                   <div class="col-3">
                     <strong>Project date</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : March - July 2021
+                    March - July 2021
                   </div><!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : VSCode, DBMS, Draw.io
+                    VSCode, DBMS, Draw.io
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://github.com/maulanakavaldo/Management-Information-System-Training-Consultant" target="_blank">: GitHub</a>
+                    <a href="https://github.com/maulanakavaldo/Management-Information-System-Training-Consultant"
+                      target="_blank">GitHub</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
                 <!-- <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Demo</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
+                                        <a href="#" target="_blank"></a>
                                     </div>
                                 </li> -->
               </ul>
@@ -208,7 +217,7 @@
               management. CV Training Management System Development. Jogja Smart
               Indotama uses the Waterfall method.
             </p>
-            <h3  class="mt-5">Features:</h3>
+            <h3 class="mt-5">Features:</h3>
             <ul class="list-group">
               <li class="list-group-item"><strong>Login:</strong> Users can log in to the application by entering valid
                 credentials. Upon
