--- a/pages/gallery-dts.html
+++ b/pages/gallery-dts.html
@@ -52,7 +52,6 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
@@ -69,13 +68,12 @@
   </header><!-- End Header -->
 
   <!-- Warning -->
-
   <!-- Galery  -->
   <section id="gallery" class="portfolio section-bg">
     <div class="container" data-aos="fade-up">
 
       <div class="section-title">
-        <h2>Certifications </h2>
+        <h2>Digital Talent Scholarship Certifications</h2>
         <!-- <p></p> -->
       </div>
 
@@ -83,59 +81,114 @@
         <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-python">Python</li>
-            <li data-filter=".filter-sql">SQL</li>
-            <li data-filter=".filter-css">CSS</li>
+            <li data-filter=".filter-data">Data</li>
+            <li data-filter=".filter-cloud">Cloud Computing</li>
           </ul>
         </div>
       </div>
 
+      <!-- FGA DATA SCIENCE -->
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-        <div class="col-lg-3 col-md-6 portfolio-item filter-python">
+        <div class="col-lg-3 col-md-6 portfolio-item  filter-data">
           <div class="portfolio-wrap">
-            <img src="" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/fga_ds1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
-                <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/fga_ds1.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 portfolio-item filter-data">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/fga_ds2.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/fga_ds2.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 portfolio-item filter-data">
+          <div class="portfolio-wrap" filter-data>
+            <img src="../assets/img/certif_licen/fga_ds3.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/fga_ds3.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        
+        <!-- GOOGLE CLOUD FUNDAMENTAL -->
+        <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/proa-gc1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/proa-gc1.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/proa-gc2.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/proa-gc2.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- CLOUD ARCHITECTING (AWS) -->
+        <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/dts/fga-ca1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/dts/fga-ca1.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/dts/fga-ca2.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/dts/fga-ca2.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/dts/fga-ca3.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/dts/fga-ca3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
+    </div>
     </div>
   </section><!-- End Portfolio Section -->
 
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <h3>Maulana Kavaldo </h3>
-      <div class="social-links">
-        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
-        <a href="https://github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i
-            class="bx bxl-linkedin"></i></a>
-        <a href="https://wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-      </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+  </main>
+  <!-- End #main -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
@@ -149,7 +202,6 @@
   <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="../assets/vendor/typed.js/typed.min.js"></script>
   <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
