--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@
             </div>
           </div>
 
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-aws-saa filter-cloud">
+          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-aws filter-cloud">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/coursera/aws-saa/AWS Cloud Solutions Architect.png"
                 class="img-fluid img-responsive thumb" alt="">
@@ -1310,6 +1310,20 @@
                 <div class="portfolio-links">
                   <a href="pages/gallery-coursera-aws-saa.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-aws filter-cloud">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/coursera/aws-fund/AWS Fundamentals.png"
+                class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>AWS Fundamental</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/certif_licen/coursera/aws-fund/AWS Fundamentals.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
