--- a/index.html
+++ b/index.html
@@ -924,6 +924,19 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/e-commerce-using-.net/index.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4> E-Commerce</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-e-commerce.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/next-movie-db/the-movie-db.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MovieDB</h4>
@@ -1055,13 +1068,13 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web filter-apps">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/e-commerce-using-.net/index.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-european-hotel/europe-hotel.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4> E-Commerce</h4>
+                <h4>Europe Hotel Booking Satisfaction Score</h4>
                 <div class="portfolio-links">
-                  <a href="pages/project-e-commerce.html" class="portfolio-details-lightbox"
+                  <a href="pages/project-european-hotel.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1186,19 +1199,6 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
-              <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/project-european-hotel/european-hotel.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4> </h4>
-                  <div class="portfolio-links">
-                    <a href="pages/project-european-hotel.html" class="portfolio-details-lightbox"
-                      data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/dataanalyst-food-sales/food-sales.png" class="img-fluid" alt="">
@@ -1322,8 +1322,8 @@
               <div class="portfolio-info">
                 <h4>AWS Fundamental</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/coursera/aws-fund/AWS Fundamentals.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/certif_licen/coursera/aws-fund/AWS Fundamentals.png"
+                    data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
