--- a/pages/project-european-hotel.html
+++ b/pages/project-european-hotel.html
@@ -59,6 +59,10 @@
                 <div class="swiper-wrapper align-items-center">
                   <!-- Tambahkan slide gambar di sini -->
                   <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/project-european-hotel/europe-hotel.png" alt=""
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
                     <img src="../assets/img/portfolio/project-european-hotel/slide-1.png" alt=""
                       data-gallery="portfolioGallery" class="portfolio-lightbox" role="button" />
                   </div>
@@ -115,7 +119,8 @@
                   </div>
                   <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="#" target="_blank">GitHub</a>
+                    <a href="https://github.com/maulanakavaldo/Project/blob/main/Europe%20Hotel%20Booking%20Satisfaction%20Score.ipynb"
+                      target="_blank">GitHub</a>
                   </div>
                 </li>
               </ul>
