--- a/pages/project-emotion-recognition.html
+++ b/pages/project-emotion-recognition.html
@@ -50,11 +50,11 @@
   <main id="main">
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+      <div class="container portfolio-info">
         <div class="row align-items-stretch">
           <!-- Bagian slider -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
                 <div class="swiper-wrapper align-items-center">
                   <!-- Tambahkan slide gambar di sini -->
@@ -70,7 +70,7 @@
 
           <!-- Bagian informasi proyek -->
           <div class="col-md-6">
-            <div class="portfolio-info">
+            <div class="">
               <h3>Project Information</h3>
               <ul class="list-group">
                 <li class="list-group-item d-flex">
@@ -117,20 +117,12 @@
                     <a href="https://github.com/maulanakavaldo/EmotionRecognitionAudio" target="_blank">GitHub</a>
                   </div>
                 </li>
-                <!-- Uncomment and use as needed for other section -->
-                <!-- <li class="list-group-item d-flex">
-                                    <div class="col-3"><strong>Demo</strong></div>
-                  <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">
-                                        <a href="#" target="_blank"></a>
-                                    </div>
-                                </li> -->
               </ul>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-12 col-lg-6">
+        <div class="col-lg-12 col-lg-6 mt-5">
           <div class="portfolio-info">
             <h3>Details</h3>
             <p>
